fix: shift main logo slightly right

--- a/css/styles.css
+++ b/css/styles.css
@@ -174,6 +174,7 @@ select {
 }
 .top-header-logo img:first-child {
   margin-right: 12px;
+  margin-left: 8px;
 }
 .top-header-logo img:last-child {
   height: 44px;
